# Fastapi5

./: alembic.ini  items_views.py  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/2026/05/: 27_0952_11_e8e472a25d88_create_products_table.py  27_1013_50_41d926e2d5b4_create_users_table.py
core/models/: user.py
shop-app/: pyproject.toml
users/: schemas.py
